Fix alignment for ul and ol
ERM#17126

[3.1.2]

Please cherry-pick to master

--- a/resources/stylesheets/content/content.less
+++ b/resources/stylesheets/content/content.less
@@ -133,7 +133,7 @@
 	.mw-parser-output > ul,
 	.mw-parser-output > ol {
 		margin-left: 0em;
-		display: inline-block;
+		display: block;
 	}
 	#contentSub .subpages {
 		display: none;
